<resources>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_notification_needs_installation_title">An application requires installation of Google Play services.</string>
    <string name="common_google_play_services_notification_needs_update_title">An application requires an update for Google Play services.</string>
    <string name="common_google_play_services_needs_enabling_title">An application requires Google Play services to be enabled.</string>
    <string name="common_google_play_services_error_notification_requested_by_msg">Requested by %1$s</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">This app won\'t run without Google Play services, which are missing from your phone.</string>
    <string name="common_google_play_services_install_text_tablet">This app won\'t run without Google Play services, which are missing from your tablet.</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">This app won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_update_text">This app won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_unsupported_text">Google Play services, which some of your applications rely on, is not supported by your device. Please contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_date_text">The date on the device appears to be incorrect. Please check the date on the device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="wallet_buy_button_place_holder">Buy with Google</string>
    <string name="hello">Hello World!</string>
    <string name="app_name">bangla keyboard</string>
    <string name="abs__action_bar_home_description">Navigate home</string>
    <string name="abs__action_bar_up_description">Navigate up</string>
    <string name="abs__action_menu_overflow_description">More options</string>
    <string name="abs__action_mode_done">Done</string>
    <string name="abs__activity_chooser_view_see_all">See all...</string>
    <string name="abs__activity_chooser_view_dialog_title_default">Select activity</string>
    <string name="abs__share_action_provider_share_with">Share with...</string>
    <string name="abs__activitychooserview_choose_application">Choose an application</string>
    <string name="abs__shareactionprovider_share_with">Share with</string>
    <string name="abs__shareactionprovider_share_with_application">Share with %s</string>
    <string name="abs__searchview_description_search">Search</string>
    <string name="abs__searchview_description_query">Search query</string>
    <string name="abs__searchview_description_clear">Clear query</string>
    <string name="abs__searchview_description_submit">Submit query</string>
    <string name="abs__searchview_description_voice">Voice search</string>
    <string name="about_dialog_custom_text"></string>
    <string name="activity_launcher_name">Dashboard_000</string>
    <string name="eula_title">Privacy Policy &amp; Advertising Terms</string>
    <string name="eula_text">EULA goes here.</string>
    <string name="admob_pubid"></string>
    <string name="admob_pubid_user">ca-app-pub-5200108416528402/8719321776</string>
    <string name="static_ad_url">www.andromo.com</string>
    <string name="activity_title_000_1000">${activity.title.value}</string>
    <string name="activity_subtitle_000_1000"></string>
    <string name="activity_class_000_1000">Dashboard_000</string>
    <string name="activity_dashimage_000_1000">${activity.dashimage.value}</string>
    <string name="Dashboard_000_activity_title">${activity.title.value}</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="dialer_not_available">The dialer is not available.</string>
    <string name="no_email_clients_configured">There are no email clients configured.</string>
    <string name="no_app_found_to_open_market_link">No application found to open market link.</string>
    <string name="no_app_found_to_open_play_link">No application found to open Google Play link.</string>
    <string name="no_app_found_to_open_map_location">No application was found to open the map location.</string>
    <string name="share_app_amazon">Check out %1$s on Amazon! %2$s</string>
    <string name="share_app_samsung">Check out %1$s on Samsung Apps! %2$s</string>
    <string name="share_app_google">Check out %1$s on Google Play! %2$s</string>
    <string name="share_using">Share using...</string>
    <string name="send_using_chooser_title">Send using...</string>
    <string name="set_as_chooser_title">Set As</string>
    <string name="options_menu_about">About</string>
    <string name="options_menu_preferences">Settings</string>
    <string name="options_menu_refresh">Refresh</string>
    <string name="options_menu_share">Share</string>
    <string name="options_menu_add_contact">Add to contacts</string>
    <string name="context_menu_set_as_contact_icon">Set as contact icon</string>
    <string name="photo_context_menu_title">Picture Options</string>
    <string name="audio_options_menu_shuffle_songs">Shuffle Songs</string>
    <string name="audio_options_menu_shuffle_on">On</string>
    <string name="audio_options_menu_shuffle_off">Off</string>
    <string name="audio_options_menu_repeat_mode">Repeat Mode</string>
    <string name="audio_options_menu_repeat_mode_off">Off</string>
    <string name="audio_options_menu_repeat_mode_single">Current Song</string>
    <string name="audio_options_menu_repeat_mode_all">All Songs</string>
    <string name="audio_options_menu_stop">Stop</string>
    <string name="soundboard_options_menu_repeat_mode_off">Off</string>
    <string name="soundboard_options_menu_repeat_mode_single">On</string>
    <string name="listening_to">I\'m listening to: %1$s</string>
    <string name="audio_context_menu_share">Share</string>
    <string name="audio_context_menu_ringtone">Set as ringtone</string>
    <string name="audio_context_menu_notification_sound">Set as notification sound</string>
    <string name="audio_context_menu_alarm_sound">Set as default alarm sound</string>
    <string name="audio_context_menu_track_info">Show track info</string>
    <string name="audio_context_menu_title">Choose Action:</string>
    <string name="audio_context_menu_download_and_play">Download and play</string>
    <string name="audio_context_menu_download">Download</string>
    <string name="audio_context_menu_cancel_download">Cancel download</string>
    <string name="audio_context_menu_stream">Stream</string>
    <string name="audio_context_menu_play">Play</string>
    <string name="audio_context_menu_pause">Pause</string>
    <string name="audio_context_menu_stop">Stop</string>
    <string name="audio_context_menu_rewind">Rewind</string>
    <string name="audio_context_menu_delete">Delete downloaded file</string>
    <string name="audio_options_menu_goto_current_track">Go to current track</string>
    <string name="audio_options_menu_download">Download</string>
    <string name="audio_options_menu_rewind">Rewind</string>
    <string name="audio_options_menu_cancel_download">Cancel download</string>
    <string name="audio_options_menu_delete">Delete downloaded file</string>
    <string name="no_app_found_to_open_url">No application could be found to open the url.</string>
    <string name="failed_to_open_url">Failed to open the url: %1$s</string>
    <string name="contacts_app_not_available">Contacts application is not available.</string>
    <string name="contact_us_phone_heading">PHONE</string>
    <string name="contact_us_email_heading">EMAIL</string>
    <string name="contact_us_website_heading">WEBSITE</string>
    <string name="contact_us_address_heading">ADDRESS</string>
    <string name="contact_us_phone_label_work">OFFICE</string>
    <string name="contact_us_phone_label_home">HOME</string>
    <string name="contact_us_phone_label_mobile">MOBILE</string>
    <string name="contact_us_phone_label_fax">FAX</string>
    <string name="airbop_prefs_notifications_category">App Notification Messages</string>
    <string name="airbop_prefs_enable_notifications_title">Enable Notifications</string>
    <string name="airbop_prefs_enable_notifications_summary">On/Off</string>
    <string name="airbop_prefs_enable_notification_sound_title">Enable Notification Sound</string>
    <string name="airbop_prefs_enable_notification_sound_summary">On/Off</string>
    <string name="airbop_prefs_enable_notification_light_title">Enable Notification Light</string>
    <string name="airbop_prefs_enable_notification_light_summary">On/Off</string>
    <string name="analytics_prefs_usage_data_category">Usage Data</string>
    <string name="analytics_prefs_enable_analytics_title">Allow this app to collect anonymous usage data.</string>
    <string name="analytics_prefs_enable_analytics_summary_on">On (anonymous usage data may be sent)</string>
    <string name="analytics_prefs_enable_analytics_summary_off">Off (not sending anything)</string>
    <string name="unable_to_open_market_link">Unable to open market link.</string>
    <string name="ask_to_install_adobe_reader">This feature requires Adobe Reader.\n\nDo you want to install it now?</string>
    <string name="market_not_installed">Market not installed.</string>
    <string name="failed_to_set_wallpaper">Failed to set wallpaper.</string>
    <string name="wallpaper_set_successfully">Wallpaper set successfully.</string>
    <string name="options_menu_toggle_descriptions">Show/hide descriptions</string>
    <string name="options_menu_set_picture_as">Set picture as</string>
    <string name="options_menu_set_as_wallpaper">Set as wallpaper</string>
    <string name="options_menu_save_picture">Save picture</string>
    <string name="download_successful">Download Successful</string>
    <string name="set_picture_as_download_manager_title">%1$s \'Set picture as\' image download</string>
    <string name="default_download_manager_title">Downloading: %1$s</string>
    <string name="about_dialog_developed_by">Developed by %1$s</string>
    <string name="about_dialog_andromo_blurb">Powered by %1$s</string>
    <string name="about_dialog_build_version">Build version %1$s</string>
    <string name="about_dialog_copyright">Copyright © %1$s</string>
    <string name="about_dialog_analytics_notice">This app may collect anonymous usage data.</string>
</resources>