<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:paddingLeft="0dp" android:paddingTop="2dp" android:paddingRight="0dp" android:paddingBottom="0dp" android:layout_width="match_parent" android:layout_height="match_parent" android:fillViewport="true">
    <LinearLayout android:orientation="vertical" android:paddingBottom="0dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="0dp">
        <TextView android:linksClickable="true" android:id="@id/app_version" android:padding="12dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="0dp" style="?unknown_attr_ref: 1010042" />
        <TextView android:textColor="#c0c0c0" android:linksClickable="true" android:id="@id/app_developer" android:paddingLeft="12dp" android:paddingTop="0dp" android:paddingRight="12dp" android:paddingBottom="12dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="0dp" android:text="@string/about_dialog_developed_by" style="?unknown_attr_ref: 1010042" />
        <TextView android:textStyle="UNKNOWN_DATA_0x0" android:textColor="#c0c0c0" android:id="@id/about_andromo" android:paddingLeft="12dp" android:paddingTop="0dp" android:paddingRight="12dp" android:paddingBottom="12dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/about_dialog_andromo_blurb" style="?unknown_attr_ref: 1010042" />
        <TextView android:textStyle="UNKNOWN_DATA_0x0" android:textColor="#c0c0c0" android:id="@id/custom_text" android:paddingLeft="12dp" android:paddingTop="0dp" android:paddingRight="12dp" android:paddingBottom="12dp" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/about_dialog_custom_text" style="?unknown_attr_ref: 1010042" />
        <TextView android:textSize="11sp" android:textStyle="UNKNOWN_DATA_0x0" android:textColor="#c0c0c0" android:id="@id/analytics_notice" android:paddingLeft="12dp" android:paddingTop="0dp" android:paddingRight="12dp" android:paddingBottom="12dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/about_dialog_analytics_notice" style="?unknown_attr_ref: 1010042" />
        <View android:id="@id/about_separator" android:background="#333" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x101" android:layout_marginLeft="0dp" android:layout_marginTop="6dp" android:layout_marginRight="0dp" android:layout_marginBottom="0dp" />
        <RelativeLayout android:id="@id/andromo_banner" android:background="#fff" android:paddingTop="12dp" android:paddingBottom="12dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="16dp">
            <ImageView android:id="@id/andromo_logo" android:focusable="true" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/andromo_logo" android:layout_centerHorizontal="true" />
        </RelativeLayout>
        <ImageView android:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@id/samsung_image" android:paddingTop="16dp" android:paddingBottom="0dp" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        <TextView android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@id/copyright" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:layout_marginBottom="6dp" android:text="@string/about_dialog_copyright" style="?unknown_attr_ref: 1010042" />
        <TextView android:textSize="10sp" android:textColor="#777" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@id/build_version" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="0dp" android:layout_marginBottom="16dp" android:text="@string/about_dialog_build_version" style="?unknown_attr_ref: 1010042" />
    </LinearLayout>
</ScrollView>
