<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="horizontal" android:id="@+id/abs__search_bar" android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView android:textAppearance="?unknown_attr_ref: 1010041" android:textColor="?attr/textColorPrimary" android:gravity="top|bottom|center_vertical|fill_vertical|center|fill" android:id="@+id/abs__search_badge" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="match_parent" android:layout_marginBottom="2dp" android:drawablePadding="0dp" />
    <ImageView android:layout_gravity="top|bottom|center_vertical|fill_vertical|center|fill" android:id="@+id/abs__search_button" android:layout_width="wrap_content" android:layout_height="match_parent" android:src="?attr/searchViewSearchIcon" android:contentDescription="@string/abs__searchview_description_search" style="?unknown_attr_ref: 10102d8" />
    <LinearLayout android:layout_gravity="top|bottom|center_vertical|fill_vertical|center|fill" android:orientation="horizontal" android:id="@+id/abs__search_edit_frame" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="8dp" android:layout_marginTop="4dp" android:layout_marginRight="8dp" android:layout_marginBottom="4dp" android:layout_weight="1.0">
        <ImageView android:layout_gravity="top|bottom|center_vertical|fill_vertical|center|fill" android:id="@+id/abs__search_mag_icon" android:visibility="gone" android:layout_width="UNKNOWN_DATA_0x7f0b000d" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/abs__dropdownitem_text_padding_left" android:src="?attr/searchViewSearchIcon" android:scaleType="centerInside" />
        <LinearLayout android:layout_gravity="top|bottom|center_vertical|fill_vertical|center|fill" android:orientation="horizontal" android:id="@+id/abs__search_plate" android:background="?attr/searchViewTextField" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1.0">
            <view android:ellipsize="end" android:layout_gravity="top|bottom|center_vertical|fill_vertical|center|fill" android:id="@+id/abs__search_src_text" android:background="0x0" android:paddingLeft="@dimen/abs__dropdownitem_text_padding_left" android:paddingRight="@dimen/abs__dropdownitem_text_padding_right" android:layout_width="UNKNOWN_DATA_0x1" android:layout_height="UNKNOWN_DATA_0x2401" android:minWidth="@dimen/abs__search_view_text_min_width" android:singleLine="true" android:layout_weight="1.0" android:inputType="text|textCapCharacters|textCapWords|textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine|textImeMultiLine|textNoSuggestions|textUri|textEmailAddress|textEmailSubject|textShortMessage|textLongMessage|textPersonName|textPostalAddress|textPassword|textVisiblePassword|textWebEditText|textFilter|textPhonetic|textWebEmailAddress|textWebPassword|phone" android:dropDownAnchor="@+id/abs__search_edit_frame" android:imeOptions="actionNone|actionGo|actionSearch|actionNext|actionDone|actionPrevious" android:contentDescription="@string/abs__searchview_description_query" android:dropDownHeight="wrap_content" android:dropDownHorizontalOffset="0dp" android:dropDownVerticalOffset="0dp" class="com.actionbarsherlock.widget.SearchView$SearchAutoComplete" style="?attr/searchAutoCompleteTextView" />
            <ImageView android:layout_gravity="top|bottom|center_vertical|fill_vertical|center|fill" android:id="@+id/abs__search_close_btn" android:background="?attr/selectableItemBackground" android:paddingLeft="8dp" android:paddingRight="8dp" android:focusable="true" android:layout_width="wrap_content" android:layout_height="match_parent" android:src="?attr/searchViewCloseIcon" android:contentDescription="@string/abs__searchview_description_clear" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:id="@+id/abs__submit_area" android:background="?attr/searchViewTextFieldRight" android:layout_width="wrap_content" android:layout_height="match_parent">
            <ImageView android:layout_gravity="top|bottom|center_vertical|fill_vertical|center|fill" android:id="@+id/abs__search_go_btn" android:background="?attr/selectableItemBackground" android:paddingLeft="16dp" android:paddingRight="16dp" android:focusable="true" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="match_parent" android:src="?attr/searchViewGoIcon" android:contentDescription="@string/abs__searchview_description_submit" />
            <ImageView android:layout_gravity="top|bottom|center_vertical|fill_vertical|center|fill" android:id="@+id/abs__search_voice_btn" android:background="?attr/selectableItemBackground" android:paddingLeft="16dp" android:paddingRight="16dp" android:focusable="true" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="match_parent" android:src="?attr/searchViewVoiceIcon" android:contentDescription="@string/abs__searchview_description_voice" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
